--- a/Visualizations/cloudiness.html
+++ b/Visualizations/cloudiness.html
@@ -127,20 +127,20 @@
           <h3 class="fw-normal text-info"><strong>Visualizations</strong></h3>
           <hr class="featurette-divider">
 
-          <div class="row justify-content-center">
+          <div class="row">
             <div class="col-sm-6" style="text-align:center">
-              <a href="./temperature.html"><img src="../assets/images/Fig1.png" alt="Max Temp" class="img-fluid" style="width:200px;height:138px;"></a>
+              <a href="./Visualizations/temperature.html"><img src="./assets/images/Fig1.png" alt="Max Temp" class="img-fluid" style="width:200px;height:138px;"></a>
             </div>
             <div class="col-sm-6" style="text-align:center">
-              <a href="./humidity.html"><img src="../assets/images/Fig2.png" alt="Humidity" class="img-fluid" style="width:200px;height:138px;"></a>
+              <a href="./Visualizations/humidity.html"><img src="./assets/images/Fig2.png" alt="Humidity" class="img-fluid" style="width:200px;height:138px;"></a>
             </div>
           </div>
-          <div class="row justify-content-center">
-            <div class="col-sm-6 border border-info" style="text-align:center">
-              <a href="./cloudiness.html"><img src="../assets/images/Fig3.png" alt="Cloudiness" class="img-fluid" style="width:200px;height:138px;"></a>
+          <div class="row">
+            <div class="col-sm-6" style="text-align:center">
+              <a href="./Visualizations/cloudiness.html"><img src="./assets/images/Fig3.png" alt="Cloudiness" class="img-fluid" style="width:200px;height:138px;"></a>
             </div>
             <div class="col-sm-6" style="text-align:center">
-              <a href="./wind_speed.html"><img src="../assets/images/Fig4.png" alt="Windspeed" class="img-fluid" style="width:200px;height:138px;"></a>
+              <a href="./Visualizations/wind_speed.html"><img src="assets/images/Fig4.png" alt="Windspeed" class="img-fluid" style="width:200px;height:138px;"></a>
             </div>
           </div>
 
