--- a/Visualizations/comparison.html
+++ b/Visualizations/comparison.html
@@ -86,10 +86,10 @@
               Plots
             </a>
             <ul class="dropdown-menu dropdown-menu-white" aria-labelledby="navbarDarkDropdownMenuLink">
-              <li><a class="dropdown-item" href="./Visualizations/temperature.html">Max Temperature</a></li>
-              <li><a class="dropdown-item" href="./Visualizations/humidity.html">Humidity</a></li>
-              <li><a class="dropdown-item" href="./Visualizations/cloudiness.html">Cloudiness</a></li>
-              <li><a class="dropdown-item" href="./Visualizations/wind_speed.html">Wind Speed</a></li>
+              <li><a class="dropdown-item" href="../Visualizations/temperature.html">Max Temperature</a></li>
+              <li><a class="dropdown-item" href="../Visualizations/humidity.html">Humidity</a></li>
+              <li><a class="dropdown-item" href="../Visualizations/cloudiness.html">Cloudiness</a></li>
+              <li><a class="dropdown-item" href="../Visualizations/wind_speed.html">Wind Speed</a></li>
             </ul>
           </li>
           <li class="nav-item">
