--- a/Visualizations/temperature.html
+++ b/Visualizations/temperature.html
@@ -86,10 +86,10 @@
               Plots
             </a>
             <ul class="dropdown-menu dropdown-menu-white" aria-labelledby="navbarDarkDropdownMenuLink">
-              <li><a class="dropdown-item" href="./Visualizations/temperature.html">Max Temperature</a></li>
-              <li><a class="dropdown-item" href="./Visualizations/humidity.html">Humidity</a></li>
-              <li><a class="dropdown-item" href="./Visualizations/cloudiness.html">Cloudiness</a></li>
-              <li><a class="dropdown-item" href="./Visualizations/wind_speed.html">Wind Speed</a></li>
+              <li><a class="dropdown-item" href="../Visualizations/temperature.html">Max Temperature</a></li>
+              <li><a class="dropdown-item" href="../Visualizations/humidity.html">Humidity</a></li>
+              <li><a class="dropdown-item" href="../Visualizations/cloudiness.html">Cloudiness</a></li>
+              <li><a class="dropdown-item" href="../Visualizations/wind_speed.html">Wind Speed</a></li>
             </ul>
           </li>
           <li class="nav-item">
@@ -131,18 +131,18 @@
 
           <div class="row">
             <div class="col-sm-6" style="text-align:center">
-              <a href="./Visualizations/temperature.html"><img src="./assets/images/Fig1.png" alt="Max Temp" class="img-fluid" style="width:200px;height:138px;"></a>
+              <a href="../Visualizations/temperature.html"><img src="../assets/images/Fig1.png" alt="Max Temp" class="img-fluid" style="width:200px;height:138px;"></a>
             </div>
             <div class="col-sm-6" style="text-align:center">
-              <a href="./Visualizations/humidity.html"><img src="./assets/images/Fig2.png" alt="Humidity" class="img-fluid" style="width:200px;height:138px;"></a>
+              <a href="../Visualizations/humidity.html"><img src="../assets/images/Fig2.png" alt="Humidity" class="img-fluid" style="width:200px;height:138px;"></a>
             </div>
           </div>
           <div class="row">
             <div class="col-sm-6" style="text-align:center">
-              <a href="./Visualizations/cloudiness.html"><img src="./assets/images/Fig3.png" alt="Cloudiness" class="img-fluid" style="width:200px;height:138px;"></a>
+              <a href="../Visualizations/cloudiness.html"><img src="../assets/images/Fig3.png" alt="Cloudiness" class="img-fluid" style="width:200px;height:138px;"></a>
             </div>
             <div class="col-sm-6" style="text-align:center">
-              <a href="./Visualizations/wind_speed.html"><img src="assets/images/Fig4.png" alt="Windspeed" class="img-fluid" style="width:200px;height:138px;"></a>
+              <a href="../Visualizations/wind_speed.html"><img src="../assets/images/Fig4.png" alt="Windspeed" class="img-fluid" style="width:200px;height:138px;"></a>
             </div>
           </div>
 
